[package]
name = "three"
version = "0.1.0"
authors = ["Jesse Jaggars <jjaggars@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "wires"
harness = false

[lib]
name = "three"
path = "src/lib.rs"

[[bin]]
name = "three"
path = "src/bin/main.rs"
